<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingBottom="114dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_cpu_usage"
                android:clickable="true"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/cpu" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/cpu_usage"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/cpu_usage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|top"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_free_memory"
                android:clickable="true"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ram" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/free_memory"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/free_memory"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|top"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_load_average"
                android:clickable="true"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/load" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/load_average"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/load_average"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|top"
                    android:lines="1"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="55sp" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_network_usage"
                android:clickable="true"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/network" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/network"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/network_usage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|top"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/ripple_disk_usage"
                android:clickable="true"
                android:elevation="3dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/disk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="7dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/disk"
                        android:textColor="@android:color/white"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/disk_usage"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|top"
                    android:text="-"
                    android:textColor="@android:color/white"
                    android:textSize="36sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/connect_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:backgroundTint="@color/dashboard_dark_orange"
            android:foregroundGravity="center_horizontal"
            android:text="@string/connect"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:backgroundTint="@color/dashboard_dark_orange"
            android:foregroundGravity="center_horizontal"
            android:text="@string/disconnect"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="10">

            <Button
                android:id="@+id/shutdown_button"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="60dp"
                android:layout_marginLeft="4dp"
                android:backgroundTint="@color/dashboard_dark_orange"
                android:enabled="false"
                android:foregroundGravity="center_horizontal"
                android:onClick="shutdownServer"
                android:text="@string/shutdown"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/wol_button"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="60dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:backgroundTint="@color/dashboard_dark_orange"
                android:foregroundGravity="center_horizontal"
                android:onClick="wolServer"
                android:text="Wakeup"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
